PITCODER/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BLACK_FLAG
    BLUE_FLAG
    ENDGRID
    GRID
    LAP_NOTE
    PADDOCK
    RED_FLAG
    SAFETY_IN
    SAFETY_OUT
    UNDERCUT_KW

Grammar

Rule 0     S' -> translation_unit
Rule 1     translation_unit -> main_program
Rule 2     translation_unit -> function_list main_program
Rule 3     translation_unit -> main_program function_list
Rule 4     translation_unit -> function_list main_program function_list
Rule 5     function_list -> function_definition
Rule 6     function_list -> function_list function_definition
Rule 7     main_program -> RACE_START GARAGE block_item_list READY
Rule 8     main_program -> RACE_START GARAGE READY
Rule 9     function_definition -> STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
Rule 10    function_definition -> STRATEGY type_specifier ID CORNER APEX compound_statement
Rule 11    function_definition -> STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
Rule 12    function_definition -> STRATEGY NEUTRO ID CORNER APEX compound_statement
Rule 13    parameter_list -> parameter_declaration
Rule 14    parameter_list -> parameter_list ALSO parameter_declaration
Rule 15    parameter_declaration -> type_specifier ID
Rule 16    type_specifier -> LAP
Rule 17    type_specifier -> SPLIT
Rule 18    type_specifier -> PITBOARD
Rule 19    type_specifier -> YELLOW_FLAG
Rule 20    type_specifier -> RADIO
Rule 21    compound_statement -> GARAGE block_item_list READY
Rule 22    compound_statement -> GARAGE READY
Rule 23    block_item_list -> block_item
Rule 24    block_item_list -> block_item_list block_item
Rule 25    block_item -> declaration
Rule 26    block_item -> statement
Rule 27    declaration -> type_specifier ID SETUP expression STOP
Rule 28    declaration -> type_specifier ID STOP
Rule 29    declaration -> VSC type_specifier ID SETUP expression STOP
Rule 30    statement -> expression_statement
Rule 31    statement -> compound_statement
Rule 32    statement -> selection_statement
Rule 33    statement -> iteration_statement
Rule 34    statement -> jump_statement
Rule 35    statement -> io_statement
Rule 36    statement -> end_statement
Rule 37    expression_statement -> expression STOP
Rule 38    expression_statement -> STOP
Rule 39    selection_statement -> STRATEGY_CHECK CORNER expression APEX compound_statement
Rule 40    selection_statement -> STRATEGY_CHECK CORNER expression APEX compound_statement STAY_OUT compound_statement
Rule 41    selection_statement -> STRATEGY_CHECK CORNER expression APEX compound_statement STAY_OUT selection_statement
Rule 42    selection_statement -> GAP_CHECK CORNER expression APEX GARAGE case_list READY
Rule 43    selection_statement -> PITWALL CORNER expression APEX GARAGE case_list READY
Rule 44    case_list -> case_item
Rule 45    case_list -> case_list case_item
Rule 46    case_item -> SECTOR expression MARSHALL block_item_list
Rule 47    case_item -> NO_DATA MARSHALL block_item_list
Rule 48    iteration_statement -> PUSH CORNER expression APEX compound_statement
Rule 49    iteration_statement -> BOX compound_statement PUSH CORNER expression APEX STOP
Rule 50    iteration_statement -> FORMATION_LAP CORNER for_init expression for_semi expression APEX compound_statement
Rule 51    iteration_statement -> FORMATION_LAP CORNER for_init expression for_semi APEX compound_statement
Rule 52    iteration_statement -> FORMATION_LAP CORNER for_semi for_semi APEX compound_statement
Rule 53    for_semi -> STOP
Rule 54    for_init -> type_specifier ID SETUP expression for_semi
Rule 55    for_init -> expression for_semi
Rule 56    for_init -> for_semi
Rule 57    jump_statement -> PODIO expression STOP
Rule 58    jump_statement -> PODIO STOP
Rule 59    jump_statement -> BOX_BOX STOP
Rule 60    jump_statement -> DRS STOP
Rule 61    io_statement -> BROADCAST CORNER expression APEX STOP
Rule 62    io_statement -> TELEMETRY CORNER ID APEX STOP
Rule 63    end_statement -> CHECKERED_FLAG STOP
Rule 64    expression -> expression TOW expression
Rule 65    expression -> expression GAP expression
Rule 66    expression -> expression ERS expression
Rule 67    expression -> expression STINT expression
Rule 68    expression -> expression FUEL_DELTA expression
Rule 69    expression -> expression DEAD_HEAT expression
Rule 70    expression -> expression OUTLAP expression
Rule 71    expression -> expression UNDERCUT expression
Rule 72    expression -> expression OVERCUT expression
Rule 73    expression -> expression UNDEREQ expression
Rule 74    expression -> expression OVEREQ expression
Rule 75    expression -> expression BOTH_TYRES expression
Rule 76    expression -> expression EITHER_TYRE expression
Rule 77    expression -> expression SAFETY expression
Rule 78    expression -> expression OVERTAKE expression
Rule 79    expression -> GAP expression
Rule 80    expression -> REVERSE_GRID expression
Rule 81    expression -> REVERSE expression
Rule 82    expression -> CORNER expression APEX
Rule 83    expression -> ID SETUP expression
Rule 84    expression -> ID PITSTOW expression
Rule 85    expression -> ID PITGAP expression
Rule 86    expression -> ID PITERS expression
Rule 87    expression -> ID PITSTINT expression
Rule 88    expression -> ID FASTLAP
Rule 89    expression -> ID DEGRADATION
Rule 90    expression -> SLIPSTREAM expression
Rule 91    expression -> POSITION expression
Rule 92    expression -> ID CORNER argument_list APEX
Rule 93    expression -> ID CORNER APEX
Rule 94    argument_list -> expression
Rule 95    argument_list -> argument_list ALSO expression
Rule 96    expression -> ID
Rule 97    expression -> INT_LITERAL
Rule 98    expression -> FLOAT_LITERAL
Rule 99    expression -> STRING_LITERAL
Rule 100   expression -> CHAR_LITERAL
Rule 101   expression -> TRUE
Rule 102   expression -> FALSE
Rule 103   expression -> DNF

Terminals, with rules where they appear

ALSO                 : 14 95
APEX                 : 9 10 11 12 39 40 41 42 43 48 49 50 51 52 61 62 82 92 93
BLACK_FLAG           : 
BLUE_FLAG            : 
BOTH_TYRES           : 75
BOX                  : 49
BOX_BOX              : 59
BROADCAST            : 61
CHAR_LITERAL         : 100
CHECKERED_FLAG       : 63
CORNER               : 9 10 11 12 39 40 41 42 43 48 49 50 51 52 61 62 82 92 93
DEAD_HEAT            : 69
DEGRADATION          : 89
DNF                  : 103
DRS                  : 60
EITHER_TYRE          : 76
ENDGRID              : 
ERS                  : 66
FALSE                : 102
FASTLAP              : 88
FLOAT_LITERAL        : 98
FORMATION_LAP        : 50 51 52
FUEL_DELTA           : 68
GAP                  : 65 79
GAP_CHECK            : 42
GARAGE               : 7 8 21 22 42 43
GRID                 : 
ID                   : 9 10 11 12 15 27 28 29 54 62 83 84 85 86 87 88 89 92 93 96
INT_LITERAL          : 97
LAP                  : 16
LAP_NOTE             : 
MARSHALL             : 46 47
NEUTRO               : 11 12
NO_DATA              : 47
OUTLAP               : 70
OVERCUT              : 72
OVEREQ               : 74
OVERTAKE             : 78
PADDOCK              : 
PITBOARD             : 18
PITERS               : 86
PITGAP               : 85
PITSTINT             : 87
PITSTOW              : 84
PITWALL              : 43
PODIO                : 57 58
POSITION             : 91
PUSH                 : 48 49
RACE_START           : 7 8
RADIO                : 20
READY                : 7 8 21 22 42 43
RED_FLAG             : 
REVERSE              : 81
REVERSE_GRID         : 80
SAFETY               : 77
SAFETY_IN            : 
SAFETY_OUT           : 
SECTOR               : 46
SETUP                : 27 29 54 83
SLIPSTREAM           : 90
SPLIT                : 17
STAY_OUT             : 40 41
STINT                : 67
STOP                 : 27 28 29 37 38 49 53 57 58 59 60 61 62 63
STRATEGY             : 9 10 11 12
STRATEGY_CHECK       : 39 40 41
STRING_LITERAL       : 99
TELEMETRY            : 62
TOW                  : 64
TRUE                 : 101
UNDERCUT             : 71
UNDERCUT_KW          : 
UNDEREQ              : 73
VSC                  : 29
YELLOW_FLAG          : 19
error                : 

Nonterminals, with rules where they appear

argument_list        : 92 95
block_item           : 23 24
block_item_list      : 7 21 24 46 47
case_item            : 44 45
case_list            : 42 43 45
compound_statement   : 9 10 11 12 31 39 40 40 41 48 49 50 51 52
declaration          : 25
end_statement        : 36
expression           : 27 29 37 39 40 41 42 43 46 48 49 50 50 51 54 55 57 61 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 74 75 75 76 76 77 77 78 78 79 80 81 82 83 84 85 86 87 90 91 94 95
expression_statement : 30
for_init             : 50 51
for_semi             : 50 51 52 52 54 55 56
function_definition  : 5 6
function_list        : 2 3 4 4 6
io_statement         : 35
iteration_statement  : 33
jump_statement       : 34
main_program         : 1 2 3 4
parameter_declaration : 13 14
parameter_list       : 9 11 14
selection_statement  : 32 41
statement            : 26
translation_unit     : 0
type_specifier       : 9 10 15 27 28 29 54

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (1) translation_unit -> . main_program
    (2) translation_unit -> . function_list main_program
    (3) translation_unit -> . main_program function_list
    (4) translation_unit -> . function_list main_program function_list
    (7) main_program -> . RACE_START GARAGE block_item_list READY
    (8) main_program -> . RACE_START GARAGE READY
    (5) function_list -> . function_definition
    (6) function_list -> . function_list function_definition
    (9) function_definition -> . STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> . STRATEGY type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> . STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> . STRATEGY NEUTRO ID CORNER APEX compound_statement

    RACE_START      shift and go to state 4
    STRATEGY        shift and go to state 6

    translation_unit               shift and go to state 1
    main_program                   shift and go to state 2
    function_list                  shift and go to state 3
    function_definition            shift and go to state 5

state 1

    (0) S' -> translation_unit .



state 2

    (1) translation_unit -> main_program .
    (3) translation_unit -> main_program . function_list
    (5) function_list -> . function_definition
    (6) function_list -> . function_list function_definition
    (9) function_definition -> . STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> . STRATEGY type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> . STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> . STRATEGY NEUTRO ID CORNER APEX compound_statement

    $end            reduce using rule 1 (translation_unit -> main_program .)
    STRATEGY        shift and go to state 6

    function_list                  shift and go to state 7
    function_definition            shift and go to state 5

state 3

    (2) translation_unit -> function_list . main_program
    (4) translation_unit -> function_list . main_program function_list
    (6) function_list -> function_list . function_definition
    (7) main_program -> . RACE_START GARAGE block_item_list READY
    (8) main_program -> . RACE_START GARAGE READY
    (9) function_definition -> . STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> . STRATEGY type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> . STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> . STRATEGY NEUTRO ID CORNER APEX compound_statement

    RACE_START      shift and go to state 4
    STRATEGY        shift and go to state 6

    main_program                   shift and go to state 8
    function_definition            shift and go to state 9

state 4

    (7) main_program -> RACE_START . GARAGE block_item_list READY
    (8) main_program -> RACE_START . GARAGE READY

    GARAGE          shift and go to state 10


state 5

    (5) function_list -> function_definition .

    RACE_START      reduce using rule 5 (function_list -> function_definition .)
    STRATEGY        reduce using rule 5 (function_list -> function_definition .)
    $end            reduce using rule 5 (function_list -> function_definition .)


state 6

    (9) function_definition -> STRATEGY . type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> STRATEGY . type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> STRATEGY . NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> STRATEGY . NEUTRO ID CORNER APEX compound_statement
    (16) type_specifier -> . LAP
    (17) type_specifier -> . SPLIT
    (18) type_specifier -> . PITBOARD
    (19) type_specifier -> . YELLOW_FLAG
    (20) type_specifier -> . RADIO

    NEUTRO          shift and go to state 12
    LAP             shift and go to state 13
    SPLIT           shift and go to state 14
    PITBOARD        shift and go to state 15
    YELLOW_FLAG     shift and go to state 16
    RADIO           shift and go to state 17

    type_specifier                 shift and go to state 11

state 7

    (3) translation_unit -> main_program function_list .
    (6) function_list -> function_list . function_definition
    (9) function_definition -> . STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> . STRATEGY type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> . STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> . STRATEGY NEUTRO ID CORNER APEX compound_statement

    $end            reduce using rule 3 (translation_unit -> main_program function_list .)
    STRATEGY        shift and go to state 6

    function_definition            shift and go to state 9

state 8

    (2) translation_unit -> function_list main_program .
    (4) translation_unit -> function_list main_program . function_list
    (5) function_list -> . function_definition
    (6) function_list -> . function_list function_definition
    (9) function_definition -> . STRATEGY type_specifier ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> . STRATEGY type_specifier ID CORNER APEX compound_statement
    (11) function_definition -> . STRATEGY NEUTRO ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> . STRATEGY NEUTRO ID CORNER APEX compound_statement

    $end            reduce using rule 2 (translation_unit -> function_list main_program .)
    STRATEGY        shift and go to state 6

    function_list                  shift and go to state 18
    function_definition            shift and go to state 5

state 9

    (6) function_list -> function_list function_definition .

    RACE_START      reduce using rule 6 (function_list -> function_list function_definition .)
    STRATEGY        reduce using rule 6 (function_list -> function_list function_definition .)
    $end            reduce using rule 6 (function_list -> function_list function_definition .)


state 10

    (7) main_program -> RACE_START GARAGE . block_item_list READY
    (8) main_program -> RACE_START GARAGE . READY
    (23) block_item_list -> . block_item
    (24) block_item_list -> . block_item_list block_item
    (25) block_item -> . declaration
    (26) block_item -> . statement
    (27) declaration -> . type_specifier ID SETUP expression STOP
    (28) declaration -> . type_specifier ID STOP
    (29) declaration -> . VSC type_specifier ID SETUP expression STOP
    (30) statement -> . expression_statement
    (31) statement -> . compound_statement
    (32) statement -> . selection_statement
    (33) statement -> . iteration_statement
    (34) statement -> . jump_statement
    (35) statement -> . io_statement
    (36) statement -> . end_statement
    (16) type_specifier -> . LAP
    (17) type_specifier -> . SPLIT
    (18) type_specifier -> . PITBOARD
    (19) type_specifier -> . YELLOW_FLAG
    (20) type_specifier -> . RADIO
    (37) expression_statement -> . expression STOP
    (38) expression_statement -> . STOP
    (21) compound_statement -> . GARAGE block_item_list READY
    (22) compound_statement -> . GARAGE READY
    (39) selection_statement -> . STRATEGY_CHECK CORNER expression APEX compound_statement
    (40) selection_statement -> . STRATEGY_CHECK CORNER expression APEX compound_statement STAY_OUT compound_statement
    (41) selection_statement -> . STRATEGY_CHECK CORNER expression APEX compound_statement STAY_OUT selection_statement
    (42) selection_statement -> . GAP_CHECK CORNER expression APEX GARAGE case_list READY
    (43) selection_statement -> . PITWALL CORNER expression APEX GARAGE case_list READY
    (48) iteration_statement -> . PUSH CORNER expression APEX compound_statement
    (49) iteration_statement -> . BOX compound_statement PUSH CORNER expression APEX STOP
    (50) iteration_statement -> . FORMATION_LAP CORNER for_init expression for_semi expression APEX compound_statement
    (51) iteration_statement -> . FORMATION_LAP CORNER for_init expression for_semi APEX compound_statement
    (52) iteration_statement -> . FORMATION_LAP CORNER for_semi for_semi APEX compound_statement
    (57) jump_statement -> . PODIO expression STOP
    (58) jump_statement -> . PODIO STOP
    (59) jump_statement -> . BOX_BOX STOP
    (60) jump_statement -> . DRS STOP
    (61) io_statement -> . BROADCAST CORNER expression APEX STOP
    (62) io_statement -> . TELEMETRY CORNER ID APEX STOP
    (63) end_statement -> . CHECKERED_FLAG STOP
    (64) expression -> . expression TOW expression
    (65) expression -> . expression GAP expression
    (66) expression -> . expression ERS expression
    (67) expression -> . expression STINT expression
    (68) expression -> . expression FUEL_DELTA expression
    (69) expression -> . expression DEAD_HEAT expression
    (70) expression -> . expression OUTLAP expression
    (71) expression -> . expression UNDERCUT expression
    (72) expression -> . expression OVERCUT expression
    (73) expression -> . expression UNDEREQ expression
    (74) expression -> . expression OVEREQ expression
    (75) expression -> . expression BOTH_TYRES expression
    (76) expression -> . expression EITHER_TYRE expression
    (77) expression -> . expression SAFETY expression
    (78) expression -> . expression OVERTAKE expression
    (79) expression -> . GAP expression
    (80) expression -> . REVERSE_GRID expression
    (81) expression -> . REVERSE expression
    (82) expression -> . CORNER expression APEX
    (83) expression -> . ID SETUP expression
    (84) expression -> . ID PITSTOW expression
    (85) expression -> . ID PITGAP expression
    (86) expression -> . ID PITERS expression
    (87) expression -> . ID PITSTINT expression
    (88) expression -> . ID FASTLAP
    (89) expression -> . ID DEGRADATION
    (90) expression -> . SLIPSTREAM expression
    (91) expression -> . POSITION expression
    (92) expression -> . ID CORNER argument_list APEX
    (93) expression -> . ID CORNER APEX
    (96) expression -> . ID
    (97) expression -> . INT_LITERAL
    (98) expression -> . FLOAT_LITERAL
    (99) expression -> . STRING_LITERAL
    (100) expression -> . CHAR_LITERAL
    (101) expression -> . TRUE
    (102) expression -> . FALSE
    (103) expression -> . DNF

    READY           shift and go to state 21
    VSC             shift and go to state 29
    LAP             shift and go to state 13
    SPLIT           shift and go to state 14
    PITBOARD        shift and go to state 15
    YELLOW_FLAG     shift and go to state 16
    RADIO           shift and go to state 17
    STOP            shift and go to state 28
    GARAGE          shift and go to state 19
    STRATEGY_CHECK  shift and go to state 37
    GAP_CHECK       shift and go to state 39
    PITWALL         shift and go to state 40
    PUSH            shift and go to state 41
    BOX             shift and go to state 42
    FORMATION_LAP   shift and go to state 43
    PODIO           shift and go to state 44
    BOX_BOX         shift and go to state 45
    DRS             shift and go to state 46
    BROADCAST       shift and go to state 47
    TELEMETRY       shift and go to state 48
    CHECKERED_FLAG  shift and go to state 49
    GAP             shift and go to state 50
    REVERSE_GRID    shift and go to state 51
    REVERSE         shift and go to state 52
    CORNER          shift and go to state 38
    ID              shift and go to state 26
    SLIPSTREAM      shift and go to state 53
    POSITION        shift and go to state 54
    INT_LITERAL     shift and go to state 55
    FLOAT_LITERAL   shift and go to state 56
    STRING_LITERAL  shift and go to state 57
    CHAR_LITERAL    shift and go to state 58
    TRUE            shift and go to state 59
    FALSE           shift and go to state 60
    DNF             shift and go to state 61

    block_item_list                shift and go to state 20
    block_item                     shift and go to state 22
    declaration                    shift and go to state 23
    statement                      shift and go to state 24
    type_specifier                 shift and go to state 25
    expression                     shift and go to state 27
    expression_statement           shift and go to state 30
    compound_statement             shift and go to state 31
    selection_statement            shift and go to state 32
    iteration_statement            shift and go to state 33
    jump_statement                 shift and go to state 34
    io_statement                   shift and go to state 35
    end_statement                  shift and go to state 36

state 11

    (9) function_definition -> STRATEGY type_specifier . ID CORNER parameter_list APEX compound_statement
    (10) function_definition -> STRATEGY type_specifier . ID CORNER APEX compound_statement

    ID              shift and go to state 62


state 12

    (11) function_definition -> STRATEGY NEUTRO . ID CORNER parameter_list APEX compound_statement
    (12) function_definition -> STRATEGY NEUTRO . ID CORNER APEX compound_statement

    ID              shift and go to state 63


state 13

    (16) type_specifier -> LAP .

    ID              reduce using rule 16 (type_specifier -> LAP .)


state 14

    (17) type_specifier -> SPLIT .

    ID              reduce using rule 17 (type_specifier -> SPLIT .)


state 15

    (18) type_specifier -> PITBOARD .

    ID              reduce using rule 18 (type_specifier -> PITBOARD .)


state 16

    (19) type_specifier -> YELLOW_FLAG .

